include/plplot.h

typedef int32_t        PLINT;
typedef int            PLINT;
#define    pladv                    c_pladv
#define    plbop                    c_plbop
#define    plclear                  c_plclear
#define    plcol0                   c_plcol0
#define    plend                    c_plend
#define    plend1                   c_plend1
#define    pleop                    c_pleop
#define    plfamadv                 c_plfamadv
#define    plflush                  c_plflush
#define    plfont                   c_plfont
#define    plfontld                 c_plfontld
#define    plgcol0                  c_plgcol0
#define    plgcolbg                 c_plgcolbg
#define    plgcompression           c_plgcompression
#define    plgfam                   c_plgfam
#define    plgfont                  c_plgfont
#define    plglevel                 c_plglevel
#define    plgra                    c_plgra
#define    plgstrm                  c_plgstrm
#define    plgver                   c_plgver
#define    plgxax                   c_plgxax
#define    plgyax                   c_plgyax
#define    plgzax                   c_plgzax
#define    plinit                   c_plinit
#define    pllab                    c_pllab
#define    plreplot                 c_plreplot
#define    plstyl                   c_plstyl
#define    plsurf3d                 c_plsurf3d
#define    plsurf3dl                c_plsurf3dl
#define    pltext                   c_pltext
#define    plvsta                   c_plvsta
/* Advance to subpage "page", or to the next one if "page" = 0. */

PLDLLIMPEXP void
c_pladv( PLINT page );
/* Start new page.  Should only be used with pleop(). */

PLDLLIMPEXP void
c_plbop( void );
/* Clear current subpage. */

PLDLLIMPEXP void
c_plclear( void );
/* Set color, map 0.  Argument is integer between 0 and 15. */

PLDLLIMPEXP void
c_plcol0( PLINT icol0 );
/* End a plotting session for all open streams. */

PLDLLIMPEXP void
c_plend( void );
/* End a plotting session for the current stream only. */

PLDLLIMPEXP void
c_plend1( void );
/* End current page.  Should only be used with plbop(). */

PLDLLIMPEXP void
c_pleop( void );
/* Advance to the next family file on the next new page */

PLDLLIMPEXP void
c_plfamadv( void );
/* Flushes the output stream.  Use sparingly, if at all. */

PLDLLIMPEXP void
c_plflush( void );
/* Sets the global font flag to 'ifont'. */

PLDLLIMPEXP void
c_plfont( PLINT ifont );
/* Load specified font set. */

PLDLLIMPEXP void
c_plfontld( PLINT fnt );
/* Returns 8 bit RGB values for given color from color map 0 */

PLDLLIMPEXP void
c_plgcol0( PLINT icol0, PLINT *r, PLINT *g, PLINT *b );
/* Returns the background color by 8 bit RGB value */

PLDLLIMPEXP void
c_plgcolbg( PLINT *r, PLINT *g, PLINT *b );
/* Returns the current compression setting */

PLDLLIMPEXP void
c_plgcompression( PLINT *compression );
/* Get family file parameters */

PLDLLIMPEXP void
c_plgfam( PLINT *p_fam, PLINT *p_num, PLINT *p_bmax );
/* Get the current font family, style and weight */

PLDLLIMPEXP void
c_plgfont( PLINT *p_family, PLINT *p_style, PLINT *p_weight );
/* Get the (current) run level.  */

PLDLLIMPEXP void
c_plglevel( PLINT *p_level );
/* Switches to graphics screen. */

PLDLLIMPEXP void
c_plgra( void );
/* Get current stream number. */

PLDLLIMPEXP void
c_plgstrm( PLINT *p_strm );
/* Get the current library version number */

PLDLLIMPEXP void
c_plgver( char *p_ver );
/* Get x axis labeling parameters */

PLDLLIMPEXP void
c_plgxax( PLINT *p_digmax, PLINT *p_digits );
/* Get y axis labeling parameters */

PLDLLIMPEXP void
c_plgyax( PLINT *p_digmax, PLINT *p_digits );
/* Get z axis labeling parameters */

PLDLLIMPEXP void
c_plgzax( PLINT *p_digmax, PLINT *p_digits );
/* Initializes PLplot, using preset or default options */

PLDLLIMPEXP void
c_plinit( void );
/* Replays contents of plot buffer to current device/file. */

PLDLLIMPEXP void
c_plreplot( void );
/* Switches to text screen. */

PLDLLIMPEXP void
c_pltext( void );
/* Defines a "standard" viewport with seven character heights for */
/* the left margin and four character heights everywhere else. */

PLDLLIMPEXP void
c_plvsta( void );
/* Sets an optional user exit handler. */

PLDLLIMPEXP void
plsexit( int ( *handler )( const char * ));