bindings/f95/plplot_bindings.f90

!***********************************************************************
!  plplot_binding.f90
!
!  Copyright (C) 2005-2016  Arjen Markus
!  Copyright (C) 2006-2016 Alan W. Irwin
!
!  This file is part of PLplot.
!
!  PLplot is free software; you can redistribute it and/or modify
!  it under the terms of the GNU Library General Public License as published
!  by the Free Software Foundation; either version 2 of the License, or
!  (at your option) any later version.
!
!  PLplot is distributed in the hope that it will be useful,
!  but WITHOUT ANY WARRANTY; without even the implied warranty of
!  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
!  GNU Library General Public License for more details.
!
!  You should have received a copy of the GNU Library General Public License
!  along with PLplot; if not, write to the Free Software
!  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
!
!
!  This file is a limited version of what should become the new style
!  Fortran bindings. It is geared to example x00f only.
!
!***********************************************************************

! TODO: plsurf3d, plsurf3dl

module plplot_types
    include 'plplot_interface_private_types.inc'
end module plplot_types

module plplot_single
    use, intrinsic :: iso_c_binding
    use plplot_types
    implicit none

    integer, parameter :: wp = private_single
    private :: wp, private_single, private_double, private_plint, private_plunicode

    include 'plplot_real_interfaces.inc'
end module plplot_single

module plplot_double
    use, intrinsic :: iso_c_binding
    use plplot_types
    implicit none

    integer, parameter :: wp = private_double
    private :: wp, private_single, private_double, private_plint, private_plunicode

    include 'plplot_real_interfaces.inc'

end module plplot_double

module plplot
    use plplot_single
    use plplot_double
    use plplot_types, only: plflt => private_plflt, private_plint, private_plunicode
    implicit none
    integer(kind=private_plint), parameter :: maxlen = 320
    include 'plplot_parameters.inc'
    private :: private_plint, private_plunicode
    private :: copystring
!
! Interfaces that do not depend on the real kind
!
    interface
        subroutine plbop() bind(c,name='c_plbop')
        end subroutine plbop
    end interface

    interface
        subroutine plclear() bind(c,name='c_plclear')
        end subroutine plclear
    end interface

    interface
        subroutine plend() bind( c, name = 'c_plend' )
        end subroutine plend
    end interface

    interface
        subroutine plend1() bind( c, name = 'c_plend1' )
        end subroutine plend1
    end interface

    interface
        subroutine pleop() bind( c, name = 'c_pleop' )
        end subroutine pleop
    end interface

    interface
        subroutine plfamadv() bind( c, name = 'c_plfamadv' )
        end subroutine plfamadv
    end interface

    interface
        subroutine plflush() bind( c, name = 'c_plflush' )
        end subroutine plflush
    end interface

    interface
        subroutine plgra() bind( c, name = 'c_plgra' )
        end subroutine plgra
    end interface

    interface
        subroutine plinit() bind( c, name = 'c_plinit' )
        end subroutine plinit
    end interface

    interface
        subroutine plreplot() bind(c,name='c_plreplot')
        end subroutine plreplot
    end interface

    interface plstyl
        module procedure plstyl_scalar
        module procedure plstyl_n_array
        module procedure plstyl_array
    end interface
    private :: plstyl_scalar, plstyl_n_array, plstyl_array

    interface
        subroutine pltext() bind(c,name='c_pltext')
        end subroutine pltext
    end interface

    interface
        subroutine plvsta() bind(c,name='c_plvsta')
        end subroutine plvsta
    end interface

contains

!
! Private utilities
!
subroutine copystring( fstring, cstring )
    character(len=*), intent(out) :: fstring
    character(len=1), dimension(:), intent(in) :: cstring

    integer :: i

    fstring = ' '
    do i = 1,min(len(fstring),size(cstring))
        if ( cstring(i) /= c_null_char ) then
            fstring(i:i) = cstring(i)
        else
            exit
        endif
    enddo

end subroutine copystring

!
! Interface routines
!
subroutine pladv( sub )
    integer, intent(in) :: sub
    interface
        subroutine c_pladv( sub ) bind( c, name = 'c_pladv' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: sub
        end subroutine c_pladv
    end interface

    call c_pladv( int(sub,kind=private_plint) )
end subroutine pladv

subroutine plcol0( icol )
    integer, intent(in)  :: icol
    interface
        subroutine c_plcol0( icol ) bind(c, name = 'c_plcol0' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: icol
        end subroutine c_plcol0
    end interface

    call c_plcol0( int(icol,kind=private_plint) )
end subroutine plcol0

subroutine plfont( font )
    integer, intent(in)  :: font
    interface
        subroutine c_plfont( font ) bind( c, name = 'c_plfont' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: font
        end subroutine c_plfont
    end interface

    call c_plfont( int(font,kind=private_plint) )
end subroutine plfont

subroutine plfontld( charset )
    integer, intent(in)  :: charset
    interface
        subroutine c_plfontld( charset ) bind( c, name = 'c_plfontld' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: charset
        end subroutine c_plfontld
    end interface

    call c_plfontld( int(charset,kind=private_plint) )
end subroutine plfontld

subroutine plgcol0( icol, r, g, b )
    integer, intent(in) :: icol
    integer, intent(out) :: r, g, b
    integer(kind=private_plint) :: r_p, g_p, b_p
    interface
        subroutine c_plgcol0( icol, r, g, b ) bind( c, name = 'c_plgcol0' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), value :: icol
            integer(kind=private_plint), intent(out) :: r, g, b
        end subroutine c_plgcol0
    end interface

    call c_plgcol0( int(icol,kind=private_plint), r_p, g_p, b_p )
    r = r_p
    g = g_p
    b = b_p
end subroutine plgcol0

subroutine plgcolbg( r, g, b )
    integer, intent(out) :: r, g, b
    integer(kind=private_plint) :: r_p, g_p, b_p
    interface
        subroutine c_plgcolbg( r, g, b ) bind( c, name = 'c_plgcolbg' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), intent(out) :: r, g, b
        end subroutine c_plgcolbg
    end interface

    call c_plgcolbg( r_p, g_p, b_p )
    r = r_p
    g = g_p
    b = b_p
end subroutine plgcolbg

subroutine plgcompression( compression )
    integer, intent(out) :: compression
    integer(kind=private_plint) :: compression_p
    interface
        subroutine c_plgcompression( compression ) bind( c, name = 'c_plgcompression' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), intent(out) :: compression
        end subroutine c_plgcompression
    end interface

    call c_plgcompression( compression_p )
    compression = compression_p
end subroutine plgcompression

subroutine plgfam( fam, num, bmax )
    integer, intent(out) :: fam, num, bmax
    integer(kind=private_plint) :: fam_p, num_p, bmax_p
    interface
        subroutine c_plgfam( fam, num, bmax ) bind( c, name = 'c_plgfam' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), intent(out) :: fam, num, bmax
        end subroutine c_plgfam
    end interface

    call c_plgfam( fam_p, num_p, bmax_p )
    fam  = fam_p
    num  = num_p
    bmax = bmax_p
end subroutine plgfam

subroutine plgfont( family, style, weight )
    integer, intent(out) :: family, style, weight
    integer(kind=private_plint) :: family_p, style_p, weight_p
    interface
        subroutine c_plgfont( family, style, weight ) bind( c, name = 'c_plgfont' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), intent(out) :: family, style, weight
        end subroutine c_plgfont
    end interface

    call c_plgfont( family_p, style_p, weight_p )
    family = family_p
    style  = style_p
    weight = weight_p
end subroutine plgfont

subroutine plglevel( level )
    integer, intent(out) :: level
    integer(kind=private_plint) :: level_p
    interface
        subroutine c_plglevel( level ) bind( c, name = 'c_plglevel' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), intent(out) :: level
        end subroutine c_plglevel
    end interface

    call c_plglevel( level_p )
    level = level_p
end subroutine plglevel

subroutine plgstrm( strm )
    integer, intent(out) :: strm
    integer(kind=private_plint) :: strm_p
    interface
        subroutine c_plgstrm( strm ) bind( c, name = 'c_plgstrm' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), intent(out) :: strm
        end subroutine c_plgstrm
    end interface

    call c_plgstrm( strm_p )
    strm = strm_p
end subroutine plgstrm

subroutine plgver(ver)
    character*(*), intent(out) :: ver

    character(len=1), dimension(100) :: verc

    interface
        subroutine c_plgver( ver ) bind(c,name='c_plgver')
            implicit none
            character(len=1), dimension(*), intent(out) :: ver
        end subroutine c_plgver
    end interface

    call c_plgver( verc )
    call copystring( ver, verc )
end subroutine plgver

subroutine plgxax( digmax, digits )
    integer, intent(out) :: digmax, digits
    integer(kind=private_plint) :: digmax_p, digits_p
    interface
        subroutine c_plgxax( digmax, digits ) bind( c, name = 'c_plgxax' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), intent(out) :: digmax, digits
        end subroutine c_plgxax
    end interface

    call c_plgxax( digmax_p, digits_p )
    digmax = digmax_p
    digits = digits_p
end subroutine plgxax

subroutine plgyax( digmax, digits )
    integer, intent(out) :: digmax, digits
    integer(kind=private_plint) :: digmax_p, digits_p
    interface
        subroutine c_plgyax( digmax, digits ) bind( c, name = 'c_plgyax' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), intent(out) :: digmax, digits
        end subroutine c_plgyax
    end interface

    call c_plgyax( digmax_p, digits_p )
    digmax = digmax_p
    digits = digits_p
end subroutine plgyax

subroutine plgzax( digmax, digits )
    integer, intent(out) :: digmax, digits
    integer(kind=private_plint) :: digmax_p, digits_p
    interface
        subroutine c_plgzax( digmax, digits ) bind( c, name = 'c_plgzax' )
            implicit none
            include 'plplot_interface_private_types.inc'
            integer(kind=private_plint), intent(out) :: digmax, digits
        end subroutine c_plgzax
    end interface

    call c_plgzax( digmax_p, digits_p )
    digmax = digmax_p
    digits = digits_p
end subroutine plgzax

subroutine pllab( xlab, ylab, title )
   character(len=*), intent(in) :: xlab, ylab, title
